2007-09-25  Alexander Larsson  <alexl@redhat.com>

        * common/gmountoperationdbus.[ch]:
        * common/gmounttracker.[ch]:
	Pass in DBusConnection to use instead of using default one
	
        * client/gdaemonfile.c:
        * client/gdaemonvfs.[ch]:
        * client/gvfsdaemondbus.c:
	Use private dbus connection even for async calls, since the
	mainloop integration is conflicting with dbus-glib.
	This is a temporary measure until this is solved in a better way.
	
        * client/gdaemonvolumemonitor.c:
        * client/gvfsfusedaemon.c:
        * daemon/gvfsbackendsmbbrowse.c:
	Update to the API changes

2007-09-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* client/gdaemonvfs.c: (g_daemon_vfs_finalize):
	Don't unref wrapped_vfs as it's just a pointer to the single instance
	return value of g_vfs_get_local().

2007-09-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* client/gdaemonfile.c: (g_daemon_file_resolve_relative_path),
	(g_daemon_file_file_iface_init):
	* test/benchmark-gvfs-big-files.c: (create_file):
	* test/benchmark-gvfs-small-files.c: (create_file):
	Update for API change in GIO. g_file_resolve_relative was renamed
	to g_file_resolve_relative_path.

2007-09-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* common/gmountspec.c: (g_mount_spec_to_dbus_with_path):
	* common/gvfsdaemonprotocol.c: (_g_dbus_append_file_attribute),
	(_g_dbus_append_file_info), (_g_dbus_append_attribute_info_list):
	* daemon/mount.c: (vfs_mount_to_dbus):
	Don't pass the contained signature when creating a DBus struct. Since
	DBus 1.1.0 this will lead to an assertion. The signature will filled
	automatically while adding values to the struct.

2007-09-17  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileoutputstream.c:
        * client/gvfsfusedaemon.c:
        * common/gvfsdaemonprotocol.h:
        * daemon/Makefile.am:
        * daemon/gvfsbackend.[ch]: